# datahub-polyglot

./: .gitignore  README.md
infra/k8s/IngressRoute/: jaeger.yaml  prom.yaml
infra/k8s/grafana/: kafka-dashboard.yaml  kafka-kraft-dashboard.yaml  mongodb-dashboard.yaml  strimzi-dashboard-kafka.json  strimzi-dashboard-kraft.json
infra/k8s/metallb/: ip.yaml
infra/k8s/metrics/: monitoring.yaml
infra/k8s/others/: grafana.yaml
infra/k8s/storage/: storage.yaml
infra/k8s/strimzi/: kafka-cluster.yaml  metrics.yaml  monitoring.yaml
infra/terraform/: .terraform.lock.hcl  main.tf  providers.tf
infra/terraform/.terraform/modules/: modules.json
infra/terraform/metallb_tf/: main.tf
infra/terraform/metrics/: main.tf  values.yaml
infra/terraform/mongodb/: main.tf  values.yaml
infra/terraform/postgresql/: postgres.tf  values.yaml
infra/terraform/prom/: main.tf  values.yaml
infra/terraform/redis/: main.tf  values.yaml
infra/terraform/strimzi/: main.tf  values.yaml
infra/terraform/tracing/: main.tf
infra/terraform/traefik_tf/: traefik.tf  traefik.yaml
infra/terraform_cdrs/: .terraform.lock.hcl  main.tf  providers.tf
infra/terraform_last/: .terraform.lock.hcl  main.tf  providers.tf
infra/terraform_last/tracing/: main.tf  values.yaml
infra/terraform_last/traefik_module/: main.tf  traefik.yaml
services/orders/: Dockerfile  pyproject.toml
services/orders/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
services/orders/src/: main.py  main_grpc.py
services/orders/src/protos/: health.proto  health_pb2.py  health_pb2_grpc.py  health_service.py
services/orders/src/utils/db/: async_database_manager.py
services/products/: Dockerfile  pyproject.toml
services/products/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
services/products/src/: main.py
services/products/src/schema/: products.py
services/products/src/utils/: exceptions.py
services/users/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/users/alembic/: env.py
services/users/alembic/versions/: 06a59a98a5aa_first_migration.py  3c5b554084ec_fix_field_email_verified.py
services/users/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
services/users/src/: main.py
services/users/src/common/: broker.py  cursor.py  role.py
services/users/src/exception/: handler_exception.py
services/users/src/models/: users.py
services/users/src/repository/: user.py
services/users/src/routes/: auth.py  kafka_user.py  profile.py  users.py
services/users/src/schema/: general.py  users.py
services/users/src/settings/: db_settings.py  utils.py
services/users/src/utils/: exceptions.py
services/users/src/utils/db/: async_database_manager.py  general.py
services/users/src/utils/db/crud/: entity.py
services/users/src/utils/dependencies/: redis_cache.py
services/users/src/utils/fastapi/: utils.py
services/users/src/utils/fastapi/email/: email_sender.py
services/users/src/utils/fastapi/email/templates/: welcome_mail.html
services/users/src/utils/kafka/: settings.py
(+2 files in other folders)
